@@ -21,6 +21,7 @@ import dao.model.Post;
 import dao.model.User;
 
 public class PostAdapter extends RecyclerView.Adapter<PostAdapter.VH> {
+
     public interface OnPostClick {
         void onClick(int position, Post post);
     }
@@ -36,52 +37,101 @@ public class PostAdapter extends RecyclerView.Adapter<PostAdapter.VH> {
     }
 
     static class VH extends RecyclerView.ViewHolder {
+
         private final TextView title;
         private final TextView meta;
         private final TextView edited;
 
         VH(View view) {
             super(view);
+
             title = view.findViewById(R.id.textPostItemTitle);
             meta = view.findViewById(R.id.textPostItemMeta);
             edited = view.findViewById(R.id.textPostEdited);
         }
 
         void display(Post post, AuthManager authManager) {
+
             title.setText(post.topic);
-            meta.setText("%s - %d messages".formatted(authorName(post, authManager), messageCount(post)));
-            edited.setVisibility(post.isEdited() ? View.VISIBLE : View.GONE);
+
+            meta.setText(
+                    String.format(
+                            "%s - %d messages",
+                            authorName(post, authManager),
+                            messageCount(post)
+                    )
+            );
+
+            edited.setVisibility(
+                    post.isEdited()
+                            ? View.VISIBLE
+                            : View.GONE
+            );
         }
 
         private String authorName(Post post, AuthManager authManager) {
-            User user = UserDAO.getInstance().getByUUID(post.poster);
-            return user == null ? "Unknown author" : authManager.getDisplayName(user);
+
+            User user =
+                    UserDAO.getInstance()
+                            .getByUUID(post.poster);
+
+            return user == null
+                    ? "Unknown author"
+                    : authManager.getDisplayName(user);
         }
 
         private int messageCount(Post post) {
+
             int count = 0;
-            Iterator<Message> messages = post.getVisibleMessages(false).getAll();
+
+            Iterator<Message> messages =
+                    post.getVisibleMessages(false)
+                            .getAll();
+
             while (messages.hasNext()) {
+
                 Message message = messages.next();
-                if (!message.isDeleted()) count++;
+
+                if (!message.isDeleted()) {
+                    count++;
+                }
             }
+
             return count;
         }
     }
 
     @NonNull
     @Override
-    public VH onCreateViewHolder(@NonNull ViewGroup parent, int viewType) {
-        View view = LayoutInflater.from(parent.getContext())
-                .inflate(R.layout.item_post, parent, false);
+    public VH onCreateViewHolder(
+            @NonNull ViewGroup parent,
+            int viewType
+    ) {
+
+        View view =
+                LayoutInflater.from(parent.getContext())
+                        .inflate(
+                                R.layout.item_post,
+                                parent,
+                                false
+                        );
+
         return new VH(view);
     }
 
     @Override
-    public void onBindViewHolder(@NonNull VH holder, int position) {
+    public void onBindViewHolder(
+            @NonNull VH holder,
+            int position
+    ) {
+
         Post post = posts.get(position);
+
         holder.display(post, authManager);
-        holder.itemView.setOnClickListener(v -> listener.onClick(position, post));
+
+        holder.itemView.setOnClickListener(
+                v -> listener.onClick(position, post)
+        );
     }
 
     @Override
